--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -19,8 +20,13 @@
     "format:styles": "stylelint ./**/*.{css,scss} --fix"
   },
   "dependencies": {
+    "daikon": "^1.2.42",
+    "fflate": "^0.7.4",
+    "gl-matrix": "^3.4.3",
+    "nifti-reader-js": "^0.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -39,6 +45,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
