--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "daikon": "^1.2.42",
     "fflate": "^0.7.4",
     "gl-matrix": "^3.4.3",
+    "gltf-loader-ts": "^0.3.1",
     "nifti-reader-js": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
