--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint:styles": "stylelint ./**/*.{css,scss}",
     "format:scripts": "prettier . --write",
     "format:styles": "stylelint ./**/*.{css,scss} --fix",
-    "test": "jest"
+    "test": "jest",
+    "ci": "BROWSER=none PORT=3000 start-server-and-test start http://localhost:3000 test"
   },
   "dependencies": {
     "daikon": "^1.2.42",
@@ -35,6 +36,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@jest/globals": "^29.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/puppeteer": "^7.0.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
@@ -45,8 +48,11 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "prettier": "^2.8.1",
+    "puppeteer": "^19.7.3",
+    "puppeteer-utilz": "^4.0.8",
+    "start-server-and-test": "^2.0.0",
     "stylelint": "^14.16.0",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
