--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.1",
     "puppeteer": "^19.7.3",
     "puppeteer-utilz": "^4.0.8",
