--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^3.0.0",
     "babel-jest": "^29.4.3",
+    "babel-plugin-inline-import": "^3.0.0",
     "concurrently": "^7.6.0",
     "dts-bundle-generator": "^7.1.0",
     "eslint": "^8.29.0",
@@ -67,6 +68,7 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
     "vite-plugin-glsl": "^1.1.2",
+    "vite-plugin-plain-text": "^1.4.2",
     "wait-on": "^7.0.1"
   }
 }
